<resources>
    <string name="app_name">BMS Logistic</string>
    <string name="parameters">Parametrlər</string>
    <string name="service_url">Servis linki</string>
    <string name="connection_timeout">Qoşulma vaxtı limiti (saniyə)</string>
    <string name="error">Xəta</string>
    <string name="connection_error">Bağlantı problemi</string>
    <string name="enter">Daxil ol</string>
    <string name="warning">Xəbərdarlıq</string>
    <string name="info">Info</string>
    <string name="refresh">Yenilə</string>
    <string name="no_new_version">Yeni versiya yoxdur!</string>
    <string name="user_label">İstifadəçi:</string>
    <string name="search">Axtar</string>
    <string name="update">Versiyanı yenilə</string>
    <string name="sending">Yola salma</string>
    <string name="delivery">Çatdırılma</string>
    <string name="user_id">İstifadəçi kodu</string>
    <string name="password">Şifrə</string>
    <string name="username_or_password_not_entered">İstifadəçi kodu və ya şifrə daxil edilməyib!</string>
    <string name="not_allowed">Səlahiyyətiniz yoxdur!</string>
    <string name="username_or_password_incorrect">İstifadəçi kodu və ya şifrə səhvdir!</string>
    <string name="scan">Skan</string>
    <string name="driver_code">Sürücü kodu</string>
    <string name="driver_name">Sürücü adı</string>
    <string name="vehicle_code">N/V kodu</string>
    <string name="confirm">Təsdiqlə</string>
    <string name="cancel">Ləğv et</string>
    <string name="note">Qeyd</string>
    <string name="trx_no">Sənəd №</string>
    <string name="return_text">Geri qaytarma</string>
    <string name="caution_doc_have_sent_already">DİQQƏT!! Bu sənəd bir dəfə çıxışa verilib və geri qayıdıb!!</string>
    <string name="doc_status_incorrect">Sənədin statusu düzgün deyil!</string>
    <string name="doc_confirmed_successfully">Sənəd uğurla təsdiqləndi</string>
    <string name="server_error">Server xətası!</string>
    <string name="customer_code">Müştəri kodu</string>
    <string name="customer_name">Müştəri adı</string>
    <string name="deliver_person">Təhvil aldı</string>
    <string name="status">Status</string>
    <string name="invalid_trx_no">Sənəd nömrəsi keçərli deyil!</string>
    <string name="from_date">Tarixdən</string>
    <string name="to_date">Tarixə</string>
    <string name="bp_code">Müştəri kodu</string>
    <string name="bp_name">Müştəri adı</string>
    <string name="sbe_code">Təmsilçi kodu</string>
    <string name="sbe_name">Təmsilçi adı</string>
    <string name="trx_date">Tarix</string>
    <string name="ship_doc_no">Yükləmə sənədi</string>
    <string name="not_found_location_for_target">Hədəf üçün koordinat tapılmadı!</string>
    <string name="from_server">Serverdən</string>
    <string name="error_occurred">Xəta baş verdi!</string>
    <string name="print">Print</string>
    <string name="not_valid_doc_for_shipping">Yükləmə üçün keçərli sənəd deyil!</string>
    <string name="want_to_delete">Silmək istəyirsinizmi?</string>
    <string name="delete">Sil</string>
    <string name="driver_or_vehicle_not_defined">Sürücü və ya nəqliyyat vasitəsi seçilməyib!</string>
    <string name="driver_not_defined">Sürücü seçilməyib!</string>
    <string name="driver_code_incorrect">Sürücü kodu düzgün deyil!</string>
    <string name="vehicle_code_incorrect">Nəqliyyat vasitəsi kodu düzgün deyil!</string>
    <string name="not_shipped_for_current_driver">Bu sənəd cari sürücü üçün yükləməyə verilməyib!</string>
    <string name="single_doc">Tək sənəd</string>
    <string name="multiple_doc">Kütləvi sənəd</string>
    <string name="ok">OK</string>
    <string name="vehicle">N/V kodu</string>
    <string name="driver">Sürücü kodu</string>
    <string name="add_new_doc">Yeni sənəd</string>
    <string name="send">Göndər</string>
    <string name="docs_confirmed_successfully">Sənədlər uğurla təsdiqləndi</string>
    <string name="internal_error">Daxili xəta</string>
    <string name="camera_scanner">Kamera skanner</string>
    <string name="update_version">Proqram versiyasını yenilə</string>
    <string name="want_to_update">Yeniləmək istəyirsinizmi?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="want_to_confirm">Təsdiqləmək istəyirsinizmi?</string>
    <string name="apply_to_central">Mərkəzə qəbul</string>
    <string name="scan_trx_no">Sənəd nömrəsini oxut</string>
    <string name="scan_confirmation_code">Təsdiq kodunu oxut</string>
    <string name="target_code">Hədəf kodu</string>
    <string name="confirmation_code">Təsdiq kodu</string>
    <string name="whs_code">Anbar kodu</string>
    <string name="check_doc_status">Statusu yoxla</string>
    <string name="not_confirmed_doc_list">Təsdiqlənməmiş sənədlər</string>
    <string name="waiting_doc_list">Yüklənməmiş sənədlər</string>
    <string name="switch_to"><![CDATA[Tək sənəd<=>Çoxlu sənəd]]></string>
    <string name="archiving">Arxivləşdirmə</string>
    <string name="archive">Arxivləşdir</string>
</resources>