<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="az.inci.bmslogistic.activity.DocListActivity">

    <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <Button
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh" />

        <ImageButton
                android:id="@+id/print"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:contentDescription="@string/print"
                app:srcCompat="@drawable/printer" />
    </TableRow>

    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TableRow
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/darker_gray">

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/trx_no"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/trx_date"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/driver_name"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/bp_code"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/bp_name"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/sbe_code"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/sbe_name"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/ship_doc_no"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/status"
                        android:textColor="@android:color/black" />

                <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />
            </TableRow>

            <ListView
                    android:id="@+id/doc_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/black"
                    android:dividerHeight="2dp"
                    android:paddingBottom="70dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <include layout="@layout/footer_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>