<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="az.inci.bmslogistic.SendingActivity">

    <Button
        android:id="@+id/scan_cam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scan_cam">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/trx_no_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trx_no" />

            <EditText
                android:id="@+id/trx_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/trx_no"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/trx_no"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/driver_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_code" />

            <EditText
                android:id="@+id/driver_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/driver_code"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/driver_code"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/driver_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name" />

            <EditText
                android:id="@+id/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/driver_name"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/driver_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vehicle_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_code" />

            <EditText
                android:id="@+id/vehicle_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/vehicle_code"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/vehicle_code"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/target_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_code" />

            <EditText
                android:id="@+id/target_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/customer_code"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/customer_code"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/target_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name" />

            <EditText
                android:id="@+id/target_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/customer_name"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/customer_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/deliver_person_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliver_person" />

            <EditText
                android:id="@+id/deliver_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/deliver_person"
                android:hint="@string/deliver_person"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/note_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note" />

            <EditText
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/note"
                android:ems="10"
                android:hint="@string/note"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel" />

    <include layout="@layout/footer_layout"
        android:id="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>