<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/driver"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/driver"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
            android:id="@+id/driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/driver" />

    <Button
            android:id="@+id/scan_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/driver"
            android:text="@string/scan"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/driver_name" />

    <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driver_name"
            app:srcCompat="@android:drawable/ic_menu_upload"
            tools:ignore="ImageContrastCheck" />

    <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/driver_name"
            app:layout_constraintEnd_toEndOf="parent" />

    <ListView
            android:id="@+id/ship_trx_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send" />

    <include
            layout="@layout/footer_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doc_list" />
</androidx.constraintlayout.widget.ConstraintLayout>